crates/solidity/testing/snapshots/bindings_output/built_ins/address_payable/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs:37:18). Please don't edit by hand.

Parse errors:
Error: Expected CloseParen or Comma.
   ╭─[input.sol:2:34]
   │
 2 │     function testPayable(address payable rcpt) public {
   │                                  ──────┬─────  
   │                                        ╰─────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function testPayable(address payable rcpt) public {
   │              ─────┬─────  
   │                   ╰─────── name: 2
 3 │         rcpt.transfer(1);
   │         ──┬─ ────┬───  
   │           ╰──────────── unresolved
   │                  │     
   │                  ╰───── unresolved
   │ 
 5 │     function testNonPayable(address rcpt) public {
   │              ───────┬──────         ──┬─  
   │                     ╰───────────────────── name: 3
   │                                       │   
   │                                       ╰─── name: 4
   │ 
 7 │         rcpt.transfer(1);
   │         ──┬─ ────┬───  
   │           ╰──────────── ref: 4
   │                  │     
   │                  ╰───── ref: built-in
   │ 
 9 │         address(uint160(rcpt)).transfer(1);
   │                         ──┬─   ────┬───  
   │                           ╰────────────── ref: 4
   │                                    │     
   │                                    ╰───── ref: built-in
───╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭───│ ▶ contract Test {
  2 │ │   ╭─▶     function testPayable(address payable rcpt) public {
    ┆ ┆   ┆   
  4 │ │ │ ├─▶     }
    │ │ │ │           
    │ │ │ ╰─────────── definiens: 2
  5 │ │ ╭───▶     function testNonPayable(address rcpt) public {
    │ │ │                                 ──────┬─────  
    │ │ │                                       ╰─────── definiens: 4
    ┆ ┆ ┆     
 10 │ │ ├───▶     }
    │ │ │             
    │ │ ╰───────────── definiens: 3
 11 │ ├─────▶ }
    │ │           
    │ ╰─────────── definiens: 1
────╯
